--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Uploaders: Emilio Pozuelo Monfort <pochu@debian.org>,
 Build-Depends:
  debhelper-compat (= 13),
  meson,
- pkg-config,
+ pkgconf,
  check,
  libgtk-3-dev,
  libmtdev-dev (>= 1.1.0),
